--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "jest": "^29.3.1"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.20.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
