--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "@babel/runtime": "^7.20.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "printWidth": 67,
+    "jsxBracketSameLine": true
   }
 }
