--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.20.7",
@@ -27,5 +28,8 @@
     "singleQuote": true,
     "printWidth": 67,
     "jsxBracketSameLine": true
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
