--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1"
   },
