--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "babel-loader": "^9.1.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "source-map-loader": "^4.0.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.20.7",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
