--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
     "babel-loader": "^9.1.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
