--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/runtime": "^7.20.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "eslint": "^8.33.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
