--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
     "babel-loader": "^9.1.2",
