--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.tsx",
   "scripts": {
     "test": "jest --watchAll",
-    "build": "webpack"
+    "build": "webpack",
+    "build:css": "tailwind build src/style.css -o dist/style.css"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "source-map-loader": "^4.0.1",
+    "tailwindcss": "^3.2.4",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
